[gd_scene load_steps=14 format=3 uid="uid://ccixy0n1vgwcc"]

[ext_resource type="Texture2D" uid="uid://cvhor6531eet2" path="res://Assets/Enemys/NightBorne/NightBorne.png" id="1_52vbf"]
[ext_resource type="Script" path="res://Scrpits/NightBorne.gd" id="1_xauhk"]

[sub_resource type="Animation" id="Animation_ksaeq"]
resource_name = "Iddle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_13ypt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_6hwei"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_0x1fp"]
resource_name = "atack"
length = 0.36
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2)]
}

[sub_resource type="Animation" id="Animation_sflce"]
resource_name = "death"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(11, 4), Vector2i(12, 4), Vector2i(13, 4), Vector2i(14, 4), Vector2i(15, 4), Vector2i(16, 4), Vector2i(17, 4), Vector2i(18, 4), Vector2i(19, 4), Vector2i(21, 4), Vector2i(22, 4)]
}

[sub_resource type="Animation" id="Animation_8hcg7"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xc5pc"]
_data = {
"Iddle": SubResource("Animation_ksaeq"),
"RESET": SubResource("Animation_13ypt"),
"Run": SubResource("Animation_6hwei"),
"atack": SubResource("Animation_0x1fp"),
"death": SubResource("Animation_sflce"),
"hurt": SubResource("Animation_8hcg7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vo174"]
size = Vector2(80.4557, 20.6877)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kad1h"]
color = Color(0, 0.282353, 0.290196, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_02yfd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fexim"]
texture = SubResource("CanvasTexture_02yfd")
modulate_color = Color(1, 0.0588235, 1, 1)

[node name="NightBorne" type="Area2D" groups=["enemies"]]
script = ExtResource("1_xauhk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_52vbf")
hframes = 23
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xc5pc")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.00004, 18.8991)
rotation = -3.14159
scale = Vector2(0.596601, 2.81336)
shape = SubResource("RectangleShape2D_vo174")

[node name="ArrowDamage" type="AudioStreamPlayer2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.721569, 0.172549, 0, 1)
clip_contents = true
offset_left = -18.0
offset_top = -16.0
offset_right = -14.0
offset_bottom = 11.0
scale = Vector2(10.3119, 0.149427)
theme_override_styles/background = SubResource("StyleBoxLine_kad1h")
theme_override_styles/fill = SubResource("StyleBoxTexture_fexim")
rounded = true
show_percentage = false

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 25)
scale = Vector2(10, -52.348)
target_position = Vector2(49, 0)
collide_with_areas = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
